--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@nextui-org/react": "^2.4.2",
     "@nextui-org/switch": "^2.0.31",
     "@nextui-org/system": "^2.2.2",
     "@nextui-org/theme": "^2.2.6",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^11.2.12",
+    "gsap": "^3.12.5",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18",
