--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@nextui-org/switch": "^2.0.31",
     "@nextui-org/system": "^2.2.2",
     "@nextui-org/theme": "^2.2.6",
+    "body-parser": "^1.20.2",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.2.12",
     "gsap": "^3.12.5",
+    "mongoose": "^8.4.4",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18",
@@ -25,6 +27,7 @@
     "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
