--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
   "functions": {
     "api/**/*.ts": {
-      "memory": 1024,
-      "maxDuration": 60
+      "runtime": "nodejs20.x"
     }
   }
 }
