--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,4 @@
 {
-  "functions": {
-    "api/**/*.ts": {
-      "runtime": "nodejs20.x"
-    }
-  }
+  "version": 2,
+  "builds": [{ "src": "package.json", "use": "@vercel/next" }]
 }
