--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URI='mongodb://localhost:27017/portfolio'
+# MONGO_URI='mongodb://localhost:27017/portfolio'
+MONGO_URI='mongodb+srv://VantaVerseSakthiSvsp:WfeDMZ$CYkThZm2@vantaverselovegame.cjjckqh.mongodb.net/portfolio?retryWrites=true&w=majority'
