--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI='mongodb+srv://VantaVerseSakthiSvsp:WfeDMZ$CYkThZm2@portfolio.cjjckqh.mongodb.net/?retryWrites=true&w=majority'
+MONGO_URI='mongodb+srv://VantaVerseSakthiSvsp:WfeDMZ$CYkThZm2@vantaverselovegame.cjjckqh.mongodb.net/portfolio?retryWrites=true&w=majority'
 
